--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^2.9.3",
     "firebase": "^7.15.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
