--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "firebase-admin": "^9.0.0",
-    "firebase-functions": "^3.8.0"
+    "firebase-functions": "^3.8.0",
+    "moment": "^2.27.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
