--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.3",
     "firebase": "^7.15.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-chartjs-2": "^2.9.0",
