--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,11 @@
     "node": "10"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^2.0.1",
+    "@tensorflow/tfjs-node": "^2.1.0",
     "firebase-admin": "^9.0.0",
-    "firebase-functions": "^3.8.0",
+    "firebase-functions": "^3.9.0",
+    "googleapis": "^58.0.0",
     "moment": "^2.27.0"
   },
   "devDependencies": {
