--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^2.6.0",
-    "@tensorflow/tfjs-node": "^2.1.0",
-    "firebase-admin": "^9.0.0",
+    "@tensorflow/tfjs-node": "^2.6.0",
+    "axios": "^0.20.0",
+    "firebase-admin": "^9.3.0",
     "firebase-functions": "^3.11.0",
     "googleapis": "^58.0.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "nodemailer": "^6.4.14",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
